# comp517-project-dcr4

./: README.md  focus_statement  todo
project/: README.md  run_project.py
project/vagabond/: constants.py  pyproject.toml  url.py  vagabond.py
project/vagabond/cache/: site_cache.py
project/vagabond/data/: README.md
project/vagabond/data/settings/: vagabond_settings.ini
project/vagabond/docs/: conf.py  index.rst  modules.rst
project/vagabond/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  start.doctree  vagabond.doctree
project/vagabond/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  start.html  vagabond.html
project/vagabond/docs/_build/html/_modules/: index.html  start.html  vagabond.html
project/vagabond/docs/_build/html/_sources/: vagabond.rst.txt
project/vagabond/render/: __init__.py  html_renderer.py
project/vagabond/user/: user.py
proposal/: README.md  project_proposal.tex
